--- a/botsettings.json
+++ b/botsettings.json
@@ -1,23 +1,23 @@
-{
-    "token": "Token",
-    "prefix": "w!",
-    "server": "wyliegdps02.7m.pl/database",
-    "customStatus": "WGDPS",
+{{
+    "token": "OTA2NzA2OTQ5ODgwNTUzNTYz.YYcipg.r_Qtc2aK-RWf1X7bYTFZBx4Qk3c",
+    "prefix": "z!",
+    "server": "http://ps.fhgdps.com/rgdpsserver2/",
+    "customStatus": "ZGDPS",
     "commandColour": "37D0DA",
     "__Emote Comment__": "These are all the emotes for the bot, you need to set them up yourself if you want the bot to look nice",
-    "star": "<:GDstar:735563775209635972>",
-    "diamond": "<:diamond:694900098836070440>",
-    "goldCoin": "<:coin:694900098479554571>",
-    "silverCoin": "<:usercoin:694900098815230024>",
-    "demon": "<:demon:694900098794258482>",
-    "cp": "<:cp:694900098890596402>",
-    "mod": "<:mod:735560669096575036>",
-    "elderMod": "<:elder:735560669117677608>",
-    "leaderboardRank": "<:rank:755459364180983808>",
-    "download": "<:downloads:694900098982871080>",
-    "like": "<:like:694900098613903382>",
-    "dislike": "<:dislike:694900098890596362>",
-    "length": "<:length:735567666101878927>",
+    "star": "<:3D_Star:906709812094586891>",
+    "diamond": "<:diamond:906710035315425350>",
+    "goldCoin": "<:starcoin:906710125593653289>",
+    "silverCoin": "<:usercoin:906710228958068767>",
+    "demon": "<:harddemon:906710318200258701>",
+    "cp": "<:CP:906710415776575488>",
+    "mod": "<:mod:906710527923871785>",
+    "elderMod": "<:Eldermod:906710613387010048>",
+    "leaderboardRank": "<:top2:906710769066975282>",
+    "download": "<:download:906710904396218369>",
+    "like": "<:like:906711314485899345>",
+    "dislike": "<:dislike:906711319363862580>",
+    "length": "<:time:906711557084426250>",
     "__Leaderboard Comment__": "These are for the Leaderboard command, the command wont work unless you are logged in. you can find the AccountID using the profile command",
     "leaderboardOn": "1 = Leaderboard on, 0 = Leaderboard off",
     "BotAccountID": "The Bot's accountID",
